--- a/comm.html
+++ b/comm.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
 
@@ -27,38 +27,36 @@
         <img src="images/icon.png" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
         Board PSN
       </a>
+<button type="button" class="btn btn-primary" style="visibility: hidden;" data-toggle="modal" data-target="#staticBackdrop" id="notifs">🔔 <span class="badge badge-light" id="badge">New</span><span class="sr-only">Nouvelle(s) mise(s) à jour</span></button>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Général</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="projets.html">Pôle projets</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="info.html">Pôle info</a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="comm.html">Pôle communication</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="qualite.html">Pôle qualité</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="treso.html">Pôle trésorerie</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="partenaires.html">Nos partenaires</a>
-          </li>
-        </ul>
-        <ul class="nav justify-content-end">
-          <li class="nav-item"><a class="nav-link disabled">Copyright Ⓒ 2020 Polytech Services Nancy</a></li>
-        </ul>
-      </div>
+          <li class="nav-item" style="padding-left: 10px;">
+            <a class="nav-link" href="index.html">🦄 Général</a>
+          </li >
+          <li class="nav-item" style="padding-left: 10px;">
+            <a class="nav-link" href="projets.html">🗂️ Pôle projets</a>
+          </li >
+          <li class="nav-item" style="padding-left: 10px;">
+            <a class="nav-link" href="info.html">🖥️ Pôle info</a>
+          </li >
+          <li class="nav-item active" style="padding-left: 10px;">
+            <a class="nav-link" href="comm.html">🎨 Pôle comm' 👈</a>
+          </li >
+          <li class="nav-item" style="padding-left: 10px;">
+            <a class="nav-link" href="qualite.html">📊 Pôle quali'</a>
+          </li >
+          <li class="nav-item" style="padding-left: 10px;">
+            <a class="nav-link" href="treso.html">💰 Pôle trésorerie</a>
+          </li >
+          <li class="nav-item" style="padding-left: 10px;">
+            <a class="nav-link" href="partenaires.html">👥 Nos partenaires</a>
+          </li >
+
+     </div>
     </nav>
 
     <div class="container">
@@ -106,7 +104,6 @@
        <a href="https://www.flaticon.com/" target=_blank>
         <img src="images/flaticon.jpg" onmouseover="javascript:this.src='images/flaticon_2.jpg';" onmouseout="javascript:this.src='images/flaticon.jpg';" />
       </a>
-<img src="images/new.svg" width="25%" style="position: absolute; margin-left: 75%;">
 
       <div class="card-body">
        <button type="button"
@@ -148,7 +145,6 @@
    <a href="https://tinyjpg.com/" target=_blank>
     <img src="images/tinyjpg.jpg" onmouseover="javascript:this.src='images/tinyjpg_2.jpg';" onmouseout="javascript:this.src='images/tinyjpg.jpg';" />
   </a>
-<img src="images/new.svg" width="25%" style="position: absolute; margin-left: 75%;">
 
 
   <div class="card-body">
@@ -171,7 +167,6 @@
     <img src="images/linkedin.jpg" onmouseover="javascript:this.src='images/linkedin_2.jpg';" onmouseout="javascript:this.src='images/linkedin.jpg';" />
   </a>
 
-<img src="images/new.svg" width="25%" style="position: absolute; margin-left: 75%;">
 
   <div class="card-body">
     <button type="button"
@@ -191,7 +186,6 @@
    <a href="https://www.facebook.com/PolytechServicesNancy/" target=_blank>
     <img src="images/facebook.jpg" onmouseover="javascript:this.src='images/facebook_2.jpg';" onmouseout="javascript:this.src='images/facebook.jpg';" />
   </a>
-<img src="images/new.svg" width="25%" style="position: absolute; margin-left: 75%;">
   <div class="card-body">
     <button type="button"
     class="btn btn-light myPopover"
@@ -211,7 +205,6 @@
     <img src="images/twitter.jpg" onmouseover="javascript:this.src='images/twitter_2.jpg';" onmouseout="javascript:this.src='images/twitter.jpg';" />
   </a>
 
-<img src="images/new.svg" width="25%" style="position: absolute; margin-left: 75%;">
 
   <div class="card-body">
     <button type="button"
