--- a/info.html
+++ b/info.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
 
@@ -22,45 +22,43 @@
 <body>
 
   <div id="wrapper">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+ <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <a class="navbar-brand" href="index.html">
         <img src="images/icon.png" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
         Board PSN
       </a>
+<button type="button" class="btn btn-primary" style="visibility: hidden;" data-toggle="modal" data-target="#staticBackdrop" id="notifs">🔔 <span class="badge badge-light" id="badge">New</span><span class="sr-only">Nouvelle(s) mise(s) à jour</span></button>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Général</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="projets.html">Pôle projets</a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="info.html">Pôle info</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="comm.html">Pôle communication</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="qualite.html">Pôle qualité</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="treso.html">Pôle trésorerie</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="partenaires.html">Nos partenaires</a>
-          </li>
-        </ul>
-        <ul class="nav justify-content-end">
-          <li class="nav-item"><a class="nav-link disabled">Copyright Ⓒ 2020 Polytech Services Nancy</a></li>
-        </ul>
-      </div>
-    </nav>
+          <li class="nav-item" style="padding-left: 10px;">
+            <a class="nav-link" href="index.html">🦄 Général </a>
+          </li >
+          <li class="nav-item" style="padding-left: 10px;">
+            <a class="nav-link" href="projets.html">🗂️ Pôle projets</a>
+          </li >
+          <li class="nav-item active" style="padding-left: 10px;">
+            <a class="nav-link" href="info.html">🖥️ Pôle info 👈</a>
+          </li >
+          <li class="nav-item" style="padding-left: 10px;">
+            <a class="nav-link" href="comm.html">🎨 Pôle comm'</a>
+          </li >
+          <li class="nav-item" style="padding-left: 10px;">
+            <a class="nav-link" href="qualite.html">📊 Pôle quali'</a>
+          </li >
+          <li class="nav-item" style="padding-left: 10px;">
+            <a class="nav-link" href="treso.html">💰 Pôle trésorerie</a>
+          </li >
+          <li class="nav-item" style="padding-left: 10px;">
+            <a class="nav-link" href="partenaires.html">👥 Nos partenaires</a>
+          </li >
 
+     </div>
+    </nav>
+   
     <div class="container">
       <div class="row">
 
@@ -69,7 +67,6 @@
            <a href="https://admin.google.com/?hl=fr" target=_blank>
             <img src="images/GoogleAdmin.jpg" onmouseover="javascript:this.src='images/GoogleAdmin_2.jpg';" onmouseout="javascript:this.src='images/GoogleAdmin.jpg';" class="img-responsive">
           </a>
-<img src="images/new.svg" width="25%" style="position: absolute; margin-left: 75%;">
 
           <div class="card-body">
             <button type="button"
@@ -181,7 +178,7 @@
    <a href="https://search.google.com/u/1/search-console?hl=fr&utm_source=wmx&utm_medium=deprecation-pane&utm_content=dashboard&resource_id=sc-domain:polytech-services-nancy.fr" target=_blank>
     <img src="images/Google.jpg" onmouseover="javascript:this.src='images/Google_2.jpg';" onmouseout="javascript:this.src='images/Google.jpg';" />
   </a>
-<img src="images/new.svg" width="25%" style="position: absolute; margin-left: 75%;">
+<!--img src="images/new.svg" width="25%" style="position: absolute; margin-left: 75%;"-->
 
   <div class="card-body">
     <button type="button"
