--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
       </div>
       <div class="modal-body">
         <p>Nouveautés de cette version :<br><br>
-            - ajout de divers émojis (c'est quand même plus joyeux 🥳)<br>
-            - ajout du sytème d'alertes pour les nouvelles mises à jour (plus besoin de trop vous harceler sur slack 🔕)</p>
+        - correction de fautes d'orthographe sur la page d'accueil<br>
+        - changement du lien pour le fichier "Suivi Projets"</p>
         <hr>
-        <div style="font-size: 13px;"><i>Version 2.2.0 du 26/06/2020. Tous droits réservés. <br>Copyright &copy; 2020 Polytech Services Nancy.</i></div></p>
+        <div style="font-size: 13px;"><i>Version 4.0 du 02/07/2020. Tous droits réservés. <br>Copyright &copy; 2020 Polytech Services Nancy.</i></div></p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-primary" data-dismiss="modal">Wow ! Cette nouvelle me remplit de joie 💌</button>
@@ -158,7 +158,7 @@
    data-toggle="popover"
    data-placement="right" title="Slack"
    data-trigger="hover"
-   data-content="Slack est un outil de commuication interne à la Junior 💬">Slack <svg class="bi bi-exclamation-circle" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+   data-content="Slack est un outil de communication interne à la Junior 💬">Slack <svg class="bi bi-exclamation-circle" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
     <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
     <path d="M7.002 11a1 1 0 1 1 2 0 1 1 0 0 1-2 0zM7.1 4.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 4.995z"/>
   </svg></button>
@@ -168,7 +168,7 @@
 
 <div class="col-xs-1">
  <div class="card text-center">
-  <a href="https://docs.google.com/spreadsheets/d/1aW_91OGrNf-W1vnu67LHKC-WVAlU24IHWnPc2Baj69w/edit#gid=1887765266" target=_blank>
+  <a href="https://docs.google.com/spreadsheets/d/15dlMubiVSkyE41RyXk5YxhhV_WwWC5tBbiympt5xO1U/edit#gid=45281368" target=_blank>
     <img src="images/sheet.jpg" onmouseover="javascript:this.src='images/sheet_2.jpg';" onmouseout="javascript:this.src='images/sheet.jpg';" />
   </a>
 
